[package]
name = "serde-datatransform"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
serde_yaml = "0.8"
hex = "0.4"
toml = "0.5"
serde-value = "0.6"